273 - Updated stats displayed under graph and styles.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1227,11 +1227,13 @@ body > .popover.top>.arrow:after {
     .accordion-stat-change {
         font-size: 100%;
         font-weight: 600;
-        margin-right: 10px;
+        margin-left: 5px;
     }
     .accordion-compared-to {
-        color: @darkgrey;
+        color: @lightmediumgrey;
+        display: block;
         font-size: 90%;
+        text-align: right;
     }
     .note {
         height: 16px;
@@ -1265,12 +1267,12 @@ body > .popover.top>.arrow:after {
         }
         .long-arrow {
             height: 9px;
-            margin-right: 5px;
+            margin-top: 5px;
             width: 20px;
         }
         .change {
             height: 18px;
-            margin-right: 5px;
+            margin-left: 5px;
             position: relative;
             top: 3px;
             width: 15px;
