Matched sales goals dials' colors to bar graph's colors.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1868,40 +1868,40 @@ LG = Large devices Desktops (≥1200px)
 #div1 {
     .arc {
         stroke-weight: 0.1;
-        fill: @cobalt;
+        fill: @boxoffice;
     }
     line {
-        stroke: @cobalt;
+        stroke: @boxoffice;
     }
 }
 
 #div2 {
     .arc {
         stroke-weight: 0.1;
-        fill: @teal;
+        fill: @cafe;
     }
     line {
-        stroke: @teal;
+        stroke: @cafe;
     }
 }
 
 #div3 {
     .arc {
         stroke-weight: 0.1;
-        fill: @aqua;
+        fill: @giftstore;
     }
     line {
-        stroke: @aqua;
+        stroke: @giftstore;
     }
 }
 
 #div4 {
     .arc {
         stroke-weight: 0.1;
-        fill: @gold;
+        fill: @membership;
     }
     line {
-        stroke: @gold;
+        stroke: @membership;
     }
 }
 
