--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -29,6 +29,7 @@ body, p, td, label, .checkbox label {
 @white: rgba(255,255,255,1);
 
 @aqua: rgba(88,167,226,1);
+@aquadarker: rgba(40,101,135,1);
 @gold: rgba(220,179,53,1);
 @darkpurple1: rgba(67,56,92,1);
 @darkpurple2: rgba(76,4,67,1);
@@ -225,7 +226,7 @@ header {
     }
 }
 #utilities,
-#manage-users {
+.utilities-set {
     background-color: @black;
     display: block;
     height: 100vh;
@@ -277,14 +278,14 @@ header {
         margin-bottom: 30px;
     }
 }
-#manage-users {
+.utilities-set {
     background-color: @white;
     h3 {
         background-color: @black;
     }
 }
 #utilities.active,
-#manage-users.active {
+.utilities-set.active {
     right: 0;
     width: 250px;
 }
@@ -1702,6 +1703,62 @@ body > .popover.top>.arrow:after {
 #mymodal .modal-user-name, .modal-user-email, .modal-acct-type, .modal-remove-button {
     float: left;
     padding-left: 10px;
+}
+
+.settings {
+    .form-group {
+        border-bottom: 1px solid @lightmediumgrey;
+        margin: 0 30px;
+        padding: 10px 0;
+        position: relative;
+        transition: 0.5s;
+        label {
+            color: @black;
+            text-transform: uppercase;
+            width: 100%;
+        }
+        .btn {
+            width: 100%;
+        }
+        input {
+            border: none;
+            color: @black;
+            width: 100%;
+        }
+        input:focus{
+            outline: none;
+        }
+        input.btn {
+            color: @white;
+        }
+    }
+    .form-group:last-child,
+    .form-group:nth-last-child(2) {
+        border-bottom: none;
+    }
+    .form-group::after {
+        background-color: red;
+        bottom: -1px;
+        content: '';
+        height: 1px;
+        left: 50%;
+        position: absolute;
+        transform: translateX(-50%);
+        transition: 0.5s;
+        width: 0;
+    }
+    .form-group.active::after {
+        width: 100%;
+    }
+}
+.btn {
+    background-color: @aqua;
+    color: @white;
+    text-transform: uppercase;
+}
+.btn:hover {
+    background-color: @aquadarker;
+    color: @white;
 }
 
 
