--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1418,11 +1418,11 @@ body > .popover.top>.arrow:after {
         .popover-content {
             padding: 5px 10px;
             a, span {
-                border-right: 1px solid @lightgrey;
+                /*border-right: 1px solid @lightgrey;*/
                 color: @darkgrey;
                 cursor: pointer;
-                margin-right: 10px;
-                padding-right: 10px;
+                /*margin-right: 10px;
+                padding-right: 10px;*/
                 text-decoration: none;
             }
             span:last-child {
