151 - Added arrows to general items in settings modal.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -273,6 +273,15 @@ header {
                 fill: @white;
             }
         }
+        .utility-arrow{
+            float: right;
+            height: 12px;
+            transform: rotate(45deg) translateY(3px);
+            width: 10px;
+            path {
+                fill: @white;
+            }
+        }
     }
     .utility.last {
         margin-bottom: 30px;
