283 - CSS for bottom stats.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -38,7 +38,7 @@ body, p, td, label, .checkbox label {
 @lightpurple: rgba(176,141,181,1);
 @teal: rgba(35,145,146,1); 
 @cobalt: rgba(52,62,112,1);
-@rust: rgba(141,55,8,1);
+@rust: rgba(148,144,133,1);
 @slateblue: rgba(156,186,204,1);
 @lightblue: rgba(212,233,246,1);
 @mediumblue: rgba(185,203,218,1);
@@ -681,7 +681,7 @@ header {
     }
     .change {
         font-size: 16px;
-        font-weight: 300;
+        font-weight: 600;
         left: 50%;
         padding: 0;
         position: absolute;
@@ -1781,13 +1781,13 @@ body > .popover.top>.arrow:after {
 #members-captured {
     .stat,
     .change {
-        color: @darkpurple1;
+        color: rgba(56,21,77,1);
         .up,
         .down {
             opacity: 1;
         }
         path {
-            fill: @darkpurple1;
+            fill: rgba(56,21,77,1);
         }
     }
     .stat:after {
@@ -1803,13 +1803,13 @@ body > .popover.top>.arrow:after {
 #members-frequency {
     .stat,
     .change {
-        color: @slateblue;
+        color: rgba(141,168,194,1);
         .up,
         .down {
             opacity: 1;
         }
         path {
-            fill: @slateblue;
+            fill: rgba(141,168,194,1);
         }
     }
     .label:after {
@@ -1817,20 +1817,20 @@ body > .popover.top>.arrow:after {
         content: '# of visits per year';
         display: block;
         font-size: 70%;
-        padding-top: 3px;
+        padding-top: 6px;
         text-transform: initial;
     }
 }
 #members-recency {
     .stat,
     .change {
-        color: @gold;
+        color: rgba(169,142,177,1);
         .up,
         .down {
             opacity: 1;
         }
         path {
-            fill: @gold;
+            fill: rgba(169,142,177,1);
         }
     }
     .label:after {
@@ -1838,7 +1838,7 @@ body > .popover.top>.arrow:after {
         content: 'Time since last visit (days)';
         display: block;
         font-size: 70%;
-        padding-top: 3px;
+        padding-top: 6px;
         text-transform: initial;
     }
 }
@@ -1859,7 +1859,7 @@ body > .popover.top>.arrow:after {
         content: 'Total #';
         display: block;
         font-size: 70%;
-        padding-top: 3px;
+        padding-top: 6px;
         text-transform: initial;
     }
     .stat:after {
