--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2136,9 +2136,102 @@ footer {
 }
 
 
+/************************/
+/******** LOGIN *********/
+/************************/
 
+.site-wrapper {
+  display: table;
+  width: 100%;
+  height: 100%; /* For at least Firefox */
+  min-height: 100%;
+  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+.site-wrapper-inner {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cover-container {
+  margin-right: auto;
+  margin-left: auto;
+}
 
+#login-background {
+    background-image: url('../img/login-background.jpg');
+	background-size:cover;
+	// background-position: center center;
+}
 
+div#login {
+    background-color: @bg_page;
+	width:30em;
+	height:35em;
+	margin: 0 auto;
+	box-shadow: 2px 2px 6px 0 @black;
+	color:@black;
+}
+@media (max-width:360px) {
+    div#login{
+    	width:100%;
+		height:auto;
+    };
+}
+
+div#login header {
+	background-color:inherit;
+	color:inherit;
+	padding-top:3em;
+	padding-bottom:3em;
+	text-align:center;
+}
+
+div#login header img#logo {
+	width:30%;
+	height:auto;
+	margin: 0 auto;
+	display:block;
+}
+div#login header div#welcome {
+	margin-top:1.5em;
+	font-size:120%;
+}
+div#login section {
+	margin-top:3em;
+}
+div#login section div#title {
+	text-align:center;
+	font-size:120%;
+}
+
+div#login section div#login-form {
+	padding-top:1.5em;
+}
+div#login section div#login-form input {
+	width:100%;
+	padding: .7em .7em;
+	margin-bottom:1.5em;
+	border:none;
+}
+
+div#login section div#login-form button.btn {
+	margin-top:1.5em;
+	border-radius:0;
+}
+div#login section div#login-form div#options {
+	margin-top:1.5em;
+	font-size:80%;
+	line-height:20px;
+}
+div#login section div#login-form div#options a:hover {
+	color:@aquadarker;
+}
+.text-align-right {
+	text-align:right;
+}
+span#remember-checkmark div.legend-check-circle {
+	background-color:@darkgrey;
+}
 
 
 
