--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2237,9 +2237,44 @@ div#login section div.klerede-form div#options a:hover {
 .text-align-right {
 	text-align:right;
 }
+span#remember-checkmark div.legend-check-circle svg {
+	display:none;
+}
+span#remember-checkmark div.legend-check-circle.active svg {
+	display:block;
+}
 span#remember-checkmark div.legend-check-circle {
 	background-color:@darkgrey;
 }
+div#login section div.klerede-form p {
+	font-size:90%;
+	text-align:center;
+	color:@mediumgrey;
+}
+
+div#login section div.klerede-form#new-password-form input {
+	margin-bottom:1.5em;
+}
+
+div#login section div.subtitle p {
+	font-size:80%;
+	font-weight:600;
+	margin-top:.6em;
+	text-align:center;
+}
+
+div#login section div#password-sent {
+	text-align:center;
+	font-size:120%;
+	line-height:120%;
+	margin-top:-1.2em;
+	margin-bottom:0.6em;
+	display:none;
+}
+div#login section div#password-sent.active {
+	display:block;
+}
+
 
 
 
