Add User Fields bug fix: now fields are correctly displayed in firefox.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -392,6 +392,7 @@ header {
             font-size: 11px;
             height: 25px;
             margin-bottom: 5px;
+			padding:0 10px;
         }
     }
     .utility {
