Add, delete and password reset wired up.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -431,6 +431,9 @@ header {
         margin: 0;
     }
 }
+#utilities .utility-group div, .utilities-set .utility-group div.user div.name {
+	font-size:118%;
+}
 #change-plan.utilities-set .utility-group {
     margin: 15px;
 }
