Background darkens while user management is open

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -227,6 +227,19 @@ header {
         }
     }
 }
+
+div#darken-background.active {
+	display:block;
+}
+div#darken-background {
+	height:100%;
+	z-index:1;
+	display:none;
+}
+div.user-wrapper {
+	z-index:2;
+}
+
 #utilities,
 .utilities-set {
     background-color: @black;
