Reporting on correct day added. Added explanation to password recovery modal.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -633,6 +633,7 @@ div.user-wrapper {
 /******** WELCOME TEXT ********/
 /******************************/
 #welcome-text,
+#reporting-on,
 #time-date {
     font-size: 160%;
     font-weight: 500;
@@ -655,6 +656,18 @@ div.user-wrapper {
             color: @mediumgrey;
         }
     }
+}
+#reporting-on {
+	margin-bottom:10px;
+}
+#reporting-on .time-date {
+	float:none;
+}
+#reporting-on h4 {
+	font-size: 9px;
+	text-transform: uppercase;
+	color: @mediumgrey;
+	margin:0;
 }
 .filter {
     background-color: @white;
@@ -2278,6 +2291,7 @@ div#login section div.subtitle p {
 	font-weight:600;
 	margin-top:.6em;
 	text-align:center;
+	line-height:120%;
 }
 
 div#login section div#password-sent {
