Fixed weird gray box arround user's email in ff.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2062,6 +2062,7 @@ body > .popover.top>.arrow:after {
             border: none;
             color: @black;
             width: 100%;
+			background-color:inherit;
         }
         input:focus{
             outline: none;
