Fixed lost save button at user profile

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2060,6 +2060,9 @@ body > .popover.top>.arrow:after {
             border: none;
             color: @black;
             width: 100%;
+		}
+		input#up-email,
+		input#up-type {
 			background-color:inherit;
         }
         input:focus{
