--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1656,6 +1656,9 @@ body > .popover.top>.arrow:after {
     .accordion-item.active {
         display: block;
     }
+    .accordion-item.active.empty {
+        display: none;
+    }
     .notes { color: @darkgrey; }
     .box{
         color: @boxoffice;
