--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2722,3 +2722,357 @@ div.dp-popup td.disabled {
 .ui-state-focus {
     outline: none;
 }
+
+
+/******************************************************/
+/*********** SOME GENERIC ITEMS FOR GRAPHICS **********/
+/******************************************************/
+
+.multicolor-wrapper:nth-child(1) .multicolor,
+.multicolor:nth-child(1) 
+{
+    color: @boxoffice;
+}
+.multicolor-wrapper:nth-child(2) .multicolor,
+.multicolor:nth-child(2) 
+{
+    color: @cafe;
+}
+.multicolor-wrapper:nth-child(3) .multicolor,
+.multicolor:nth-child(3) 
+{
+    color: @giftstore;
+}
+.multicolor-wrapper:nth-child(4) .multicolor,
+.multicolor:nth-child(4) 
+{
+    color: @membership;
+}
+
+.multicolor-wrapper:nth-child(1) .multicolorbg,
+.multicolorbg:nth-child(1)
+{
+    background-color: @boxoffice;
+}
+.multicolor-wrapper:nth-child(2) .multicolorbg,
+.multicolorbg:nth-child(2)
+{
+    background-color: @cafe;
+}
+.multicolor-wrapper:nth-child(3) .multicolorbg,
+.multicolorbg:nth-child(3)
+{
+    background-color: @giftstore;
+}
+.multicolor-wrapper:nth-child(4) .multicolorbg,
+.multicolorbg:nth-child(4)
+{
+    background-color: @membership;
+}
+
+.multicolor-wrapper:nth-child(1) .multicolorfl,
+.multicolorfl:nth-child(1)
+{
+    fill: @boxoffice;
+}
+.multicolor-wrapper:nth-child(2) .multicolorfl,
+.multicolorfl:nth-child(2)
+{
+    fill: @cafe;
+}
+.multicolor-wrapper:nth-child(3) .multicolorfl,
+.multicolorfl:nth-child(3)
+{
+    fill: @giftstore;
+}
+.multicolor-wrapper:nth-child(4) .multicolorfl,
+.multicolorfl:nth-child(4)
+{
+    fill: @membership;
+}
+
+.inline-block {
+    display:inline-block;
+}
+.circle-checkbox {
+    border-radius: 10px;
+    cursor: pointer;
+    height: 20px;
+    width: 20px;
+    background-color:lightgray;
+    display:inline-block;
+    vertical-align: bottom;
+}
+
+/******************************************************/
+/********************** REVENUE2 **********************/
+/******************************************************/
+
+#revenue2 h2 {
+    font-size: 150%;
+    text-transform: uppercase;
+    margin-bottom:20px;
+}
+
+#revenue2 select.form-control {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="30px" height="7px" viewBox="0 0 21.294 15.555" preserveAspectRatio="xMidYMid meet" class="filter-caret"><path d="M21.854 0.439l-7.366 7.365L12.523 9.77L10.56 7.804L3.196 0.441C2.425-0.185 1.293-0.147 0.6 0.6 c-0.768 0.768-0.768 2 0 2.778l9.983 9.983l1.964 1.966l1.965-1.966l9.984-9.983c0.383-0.383 0.575-0.886 0.575-1.389 c0-0.502-0.192-1.006-0.575-1.389C23.755-0.146 22.626-0.185 21.9 0.4"/></svg>');
+    background-repeat: no-repeat;
+    background-position: 100% 50%;
+}
+#revenue2 #date {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="25.584px" height="15px" viewBox="0 0 25.584 27.51" preserveAspectRatio="xMidYMid meet" class="filter-calendar"><path d="M19.275 0.953v0.602v1.89v1.537c0 0.5 0.4 1 1 0.953s0.952-0.427 0.952-0.953V3.444v-1.89V0.953 C21.181 0.4 20.8 0 20.2 0C19.702 0 19.3 0.4 19.3 1"/><path d="M11.816 0.953v0.602v1.89v1.537c0 0.5 0.4 1 1 0.953c0.527 0 0.953-0.427 0.953-0.953V3.444v-1.89V0.953 C13.723 0.4 13.3 0 12.8 0C12.244 0 11.8 0.4 11.8 1"/><path d="M4.483 0.953v0.602v1.89v1.537c0 0.5 0.4 1 1 0.953c0.527 0 0.953-0.427 0.953-0.953V3.444v-1.89V0.953 C6.39 0.4 6 0 5.4 0S4.483 0.4 4.5 1"/><path d="M23.034 2.546h-0.978v0.143v2.664c0 0.912-0.828 1.651-1.85 1.651c-1.023 0-1.853-0.739-1.853-1.651V2.688V2.546h-3.712 v0.143v2.664c0 0.912-0.828 1.651-1.851 1.651S10.94 6.3 10.9 5.353V2.688V2.546H7.274v0.143v2.664 c0 0.912-0.829 1.651-1.851 1.651S3.571 6.3 3.6 5.353V2.688V2.546H2.55C1.142 2.5 0 3.7 0 5.096v19.865 c0 1.4 1.1 2.5 2.5 2.549h20.484c1.407 0 2.55-1.141 2.55-2.549V5.096C25.584 3.7 24.4 2.5 23 2.5 M23.71 15.1 v3.424v5.961c0 0.439-0.357 0.796-0.797 0.796h-9.974c-0.051 0-0.1-0.006-0.147-0.016c-0.048 0.01-0.097 0.016-0.147 0.016H2.671 c-0.44 0-0.797-0.356-0.797-0.796v-5.961v-3.424V9.141c0-0.439 0.357-0.796 0.797-0.796h9.974c0.051 0 0.1 0 0.1 0 c0.048-0.01 0.097-0.016 0.147-0.016h9.974c0.439 0 0.8 0.4 0.8 0.796V15.102z"/></svg>');
+    background-repeat: no-repeat;
+    background-position: 100% 50%;
+}
+
+#revenue2 .form-control {
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    background-color: rgba(236,234,231,1);
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+    font-size: 100%;
+    transition: none;
+    width: 180px;
+    display:inline-block;
+    vertical-align:middle;
+    font-weight: 600;
+    margin-right:10px;
+}
+
+#revenue2 .text-right .form-control {
+    margin-left:10px;
+    margin-right:0;
+}
+
+#revenue2 #channel-filters {
+    text-transform: uppercase;
+    font-weight: 600;
+}
+#revenue2 .channel {
+    display:inline-block;
+}
+
+#revenue2 .unit-filter {
+    display:inline-block;
+    font-weight: 500;
+    margin-right:10px;
+}
+
+#revenue2 .graphic {
+    padding-top:2em;
+    height:400px;
+    font-weight:500;
+    white-space-collapse: discard;
+    padding-right:50px;
+    padding-left:10px;
+}
+
+
+#revenue2 .graphic .grow {
+    width:100%;
+    height:75px;
+}
+
+#revenue2 .graphic #y-axis {
+    height:100%;
+    width:6%;
+    vertical-align: top;
+    margin-top:-1em;
+}
+#revenue2 .graphic #y-axis .glabel {
+    float:right;
+    min-width:70%;
+}
+
+#revenue2 .graphic #gbody {
+    height:100%;
+    vertical-align: top;
+    width:94%;
+    position:relative;
+}
+#revenue2 .graphic #gbody #gbackground {
+    width:100%;
+    position:absolute;
+}
+
+#revenue2 .graphic #gbody .grow {
+    border-top: 1px solid #999;
+}
+#revenue2 .graphic #gbody .grow:last-child {
+    border-bottom: 1px solid #999;
+}
+
+#revenue2 .graphic #gbody .grow {
+    border-top: 1px solid #999;
+}
+
+#revenue2 .graphic #gbody #gbars {
+    position:absolute;
+    width:100%;
+    height:100%;
+    padding: 0 10px;
+}
+#revenue2 .graphic #gbody #gbars .gbar {
+    width:10%;
+    margin-right:5%;
+    height:325px;
+    display:inline-block;
+    position:relative;
+}
+#revenue2 .graphic #gbody #gbars .gbar .glabel {
+    position:absolute;
+    bottom:0;
+    width: 100%;
+    text-align:center;
+}
+#revenue2 .graphic #gbody #gbars .gbar-sections {
+    position:absolute;
+    bottom: 25px;
+    width: 100%;
+    height:250px;
+}
+#revenue2 .graphic #gbody #gbars .gbar-section {
+    height: 33.33333333%;
+    width: 100%;
+    display:inline-block;
+}
+
+#revenue2 .graphic  .gbar:hover #popup {
+    display:block;
+}
+#revenue2 .graphic #popup {
+    position:absolute;
+    width:260px;
+    z-index:1;
+    display:none;
+    left:60%;
+    margin-left:-130px;
+    bottom:287px;
+    /*bottom: 150 (alto barras) + 25 (exceso gbar ->325) + 12 (alto arrow)*/
+}
+
+#revenue2 .graphic #popup #weather
+{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color:lightblue;
+    width:100%;
+    margin-bottom:0;
+    padding: 0 6px;
+}
+#revenue2 .graphic #popup #weather #popup-date
+{
+    margin-top:6px;
+    margin-left:10px;
+    margin-bottom:6px;
+}
+
+#revenue2 .graphic #popup #weather #icon,
+#revenue2 .graphic #popup #weather #description 
+{
+    vertical-align:top;
+    line-height:130%;
+    font-size:80%;
+}
+#revenue2 .graphic #popup #weather #icon{
+    background-color:white;
+    width:45px;
+    height:45px;
+}
+#revenue2 .graphic #popup #weather #icon img{
+    width:30px;
+    height:auto;
+    margin: 10px 8px;
+}
+
+
+#revenue2 .graphic #popup #details
+{
+    background-color:darkgray;
+    color:white;
+    width:100%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    padding:6px;
+    margin-bottom:0;
+}
+#revenue2 .graphic #popup #details .details-row div
+{
+    margin-bottom:0;
+}
+#revenue2 .graphic #popup #details .circle
+{
+    width:10px;
+    height:10px;
+    border-radius:10px;
+    margin-top:4px;
+}
+
+#revenue2 .graphic #popup #arrow
+{
+	width: 0;
+	height: 0;
+	border-left: 12px solid transparent;
+	border-right: 12px solid transparent;
+	border-top: 12px solid darkgray;
+    position:absolute;
+    left:110.5px;
+}
+
+
+
+#revenue2 .details #header {
+    font-size:140%;
+}
+#revenue2 .details #table {
+    font-size:120%;
+}
+#revenue2 .details #table .table-item-wrapper {
+    margin-bottom:0;
+}
+#revenue2 .details #table .table-item {
+    border-top: 1px solid #999;
+    padding-top:10px;
+    padding-right:5px;
+    padding-left:5px;
+    padding-bottom:5px;
+    line-height:100%;
+    height:40px;
+}
+
+#revenue2 .details #table .table-item svg {
+    vertical-align: middle;
+}
+#revenue2 .details #table .table-item div {
+    padding:0!important;
+    margin-bottom:0;
+}
+#revenue2 .details #table .table-item #change,
+#revenue2 .details #table .table-item #to-val 
+{
+    font-weight:700;
+}
+#revenue2 .details #table .table-item #from-val 
+{
+    color:gray;
+}
+#revenue2 #details-handle {
+    display:inline-block;
+    position:absolute;
+    bottom:-30px;
+    left:50%;
+    width:160px;
+    height:30px;
+    line-height:30px;
+    background-color:white;
+    margin-left:-80px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    text-transform: uppercase;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="30px" height="7px" viewBox="0 0 21.294 15.555" preserveAspectRatio="xMidYMid meet" class="filter-caret"><path d="M21.854 0.439l-7.366 7.365L12.523 9.77L10.56 7.804L3.196 0.441C2.425-0.185 1.293-0.147 0.6 0.6 c-0.768 0.768-0.768 2 0 2.778l9.983 9.983l1.964 1.966l1.965-1.966l9.984-9.983c0.383-0.383 0.575-0.886 0.575-1.389 c0-0.502-0.192-1.006-0.575-1.389C23.755-0.146 22.626-0.185 21.9 0.4"/></svg>');
+    background-repeat: no-repeat;
+    background-position: 2% 50%;
+}
