--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2791,6 +2791,9 @@ div.dp-popup td.disabled {
     fill: @membership;
 }
 
+form.inline-block {
+    vertical-align:middle;
+}
 .inline-block {
     display:inline-block;
 }
@@ -2819,12 +2822,23 @@ div.dp-popup td.disabled {
     background-repeat: no-repeat;
     background-position: 100% 50%;
 }
-#revenue2 #date {
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="25.584px" height="15px" viewBox="0 0 25.584 27.51" preserveAspectRatio="xMidYMid meet" class="filter-calendar"><path d="M19.275 0.953v0.602v1.89v1.537c0 0.5 0.4 1 1 0.953s0.952-0.427 0.952-0.953V3.444v-1.89V0.953 C21.181 0.4 20.8 0 20.2 0C19.702 0 19.3 0.4 19.3 1"/><path d="M11.816 0.953v0.602v1.89v1.537c0 0.5 0.4 1 1 0.953c0.527 0 0.953-0.427 0.953-0.953V3.444v-1.89V0.953 C13.723 0.4 13.3 0 12.8 0C12.244 0 11.8 0.4 11.8 1"/><path d="M4.483 0.953v0.602v1.89v1.537c0 0.5 0.4 1 1 0.953c0.527 0 0.953-0.427 0.953-0.953V3.444v-1.89V0.953 C6.39 0.4 6 0 5.4 0S4.483 0.4 4.5 1"/><path d="M23.034 2.546h-0.978v0.143v2.664c0 0.912-0.828 1.651-1.85 1.651c-1.023 0-1.853-0.739-1.853-1.651V2.688V2.546h-3.712 v0.143v2.664c0 0.912-0.828 1.651-1.851 1.651S10.94 6.3 10.9 5.353V2.688V2.546H7.274v0.143v2.664 c0 0.912-0.829 1.651-1.851 1.651S3.571 6.3 3.6 5.353V2.688V2.546H2.55C1.142 2.5 0 3.7 0 5.096v19.865 c0 1.4 1.1 2.5 2.5 2.549h20.484c1.407 0 2.55-1.141 2.55-2.549V5.096C25.584 3.7 24.4 2.5 23 2.5 M23.71 15.1 v3.424v5.961c0 0.439-0.357 0.796-0.797 0.796h-9.974c-0.051 0-0.1-0.006-0.147-0.016c-0.048 0.01-0.097 0.016-0.147 0.016H2.671 c-0.44 0-0.797-0.356-0.797-0.796v-5.961v-3.424V9.141c0-0.439 0.357-0.796 0.797-0.796h9.974c0.051 0 0.1 0 0.1 0 c0.048-0.01 0.097-0.016 0.147-0.016h9.974c0.439 0 0.8 0.4 0.8 0.796V15.102z"/></svg>');
-    background-repeat: no-repeat;
-    background-position: 100% 50%;
-}
 
+form.datepicker-form {
+    display:inline-block;
+    position:relative;
+    vertical-align:middle;
+}
+a.dp-choose-date {
+    float:none;
+    vertical-align: middle;
+    position: absolute;
+    right:16px;
+    top:50%;
+    margin-top:-8px;
+}
+#revenue2 .unit-filter {
+    cursor: pointer;
+}
 #revenue2 .form-control {
     appearance: none;
     -moz-appearance: none;
@@ -2930,7 +2944,7 @@ div.dp-popup td.disabled {
 }
 #revenue2 .graphic #gbody #gbars .gbar-sections {
     position:absolute;
-    bottom: 25px;
+    bottom: 24px;
     width: 100%;
     height:250px;
 }
@@ -2981,6 +2995,10 @@ div.dp-popup td.disabled {
     background-color:white;
     width:45px;
     height:45px;
+    margin-right:5px;
+}
+#revenue2 .graphic #popup #weather #description {
+    max-width:58px;
 }
 #revenue2 .graphic #popup #weather #icon img{
     width:30px;
