Revenue refactor: Period compare data show ready. re #354 re #357

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -3077,6 +3077,10 @@ a.dp-choose-date {
     padding:0!important;
     margin-bottom:0;
 }
+#revenue2 .details #table .table-item .down {
+    transform: rotate(180deg);
+}
+
 #revenue2 .details #table .table-item #change,
 #revenue2 .details #table .table-item #to-val 
 {
