--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -2965,7 +2965,8 @@ a.dp-choose-date {
     position:absolute;
     bottom: 24px;
     width: 100%;
-    height:250px;
+    height:1px;
+    transition: height 600ms cubic-bezier(0.1, -1.2, 0.1, 2);
 }
 #revenue2 .graphic #gbody #gbars .gbar-section {
     height: 33.33333333%;
@@ -2974,8 +2975,7 @@ a.dp-choose-date {
 }
 
 #revenue2 .graphic  .gbar:hover #popup {
-    transition: .3s;
-    display:block;
+    // display:block;
 }
 #revenue2 .graphic #popup {
     position:absolute;
@@ -2983,7 +2983,7 @@ a.dp-choose-date {
     z-index:1;
     display:none;
     left:60%;
-    margin-left:-130px;
+    margin-left:-125px;
     bottom:287px;
     /*bottom: 150 (alto barras) + 25 (exceso gbar ->325) + 12 (alto arrow)*/
 }
